tests/syntax_error/hex.jou
def foo() -> int:
    a = 0xabc123
    b = 0xabc
    c = 0xa
    d = 0x00a
    e = 0x  # Error: invalid hex number
